--- a/Exercicios/Ex022 Modulo 3/backgroun006.html
+++ b/Exercicios/Ex022 Modulo 3/backgroun006.html
@@ -7,11 +7,16 @@
     <title>Document</title>
     <style>
         body{
+            /*
             height: 100vh;
             background-color: black;
             background-image: url(Imagens/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat;
+            
+            background-attachment: fixed;
+            */
+            background: black url(Imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
         main{
